Comment out margin-right on header logo to fix navigation gap

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -125,7 +125,8 @@ to { transform: translateY(-120px); opacity: 0; }
 
 header .logo {
 
-margin-right: 40px; /* gap between logo and nav */
+/* margin-right: 40px;  */
+/* gap between logo and nav */
 
 }
 
